--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,11 @@ services:
     volumes:
       - ./support-system-backend/src/database:/app/support-system-backend/src/database
     restart: unless-stopped
+
+  frontend:
+    build:
+      context: ./support-system-frontend
+      dockerfile: Dockerfile.frontend
+    ports:
+      - "5173:5173"
+    restart: unless-stopped
