--- a/support-system-frontend/package.json
+++ b/support-system-frontend/package.json
@@ -38,18 +38,33 @@
     "@radix-ui/react-toggle-group": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.6",
     "@tailwindcss/vite": "^4.1.7",
+    "@tinymce/tinymce-react": "^4.3.2",
+    "@tiptap/extension-bubble-menu": "^2.2.1",
+    "@tiptap/extension-document": "^2.2.1",
+    "@tiptap/extension-floating-menu": "^2.2.1",
+    "@tiptap/extension-image": "^2.2.1",
+    "@tiptap/extension-link": "^2.2.1",
+    "@tiptap/extension-placeholder": "^2.2.1",
+    "@tiptap/extension-text-align": "^2.2.1",
+    "@tiptap/extension-typography": "^2.2.1",
+    "@tiptap/pm": "^2.2.1",
+    "@tiptap/react": "^2.2.1",
+    "@tiptap/starter-kit": "^2.2.1",
+    "@types/dompurify": "^3.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.2.6",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.15.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.510.0",
     "next-themes": "^0.4.6",
-    "react": "^19.1.0",
+    "react": "^18.2.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.56.3",
     "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^7.6.1",
@@ -57,11 +72,13 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
+    "tinymce": "^7.9.1",
     "vaul": "^1.1.2",
     "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
